2001-10-09  Ken Raeburn  <raeburn@mit.edu>

	* auth-proto.h, auth.h, enc-proto.h, enc_des.c, encrypt.c,
	encrypt.h, kerberos.c, key-proto.h, misc-proto.h, misc.h,
	setenv.c: Make prototypes unconditional.  Don't define P().

2001-07-23  Ezra Peisach  <epeisach@mit.edu>

	* enc_des.c (fb64_start): Remove variable set but never used.

2001-07-08  Ezra Peisach  <epeisach@mit.edu>

	* kerberos.c (Data): Third argument now const.

	* misc.c (printd): First argument now const.

	* misc-proto.h: Modify printd prototype to take const first
	argument. 

	* auth.c: Cast argument to memcpy to unsigned. 

2001-07-06  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Check for need to provide setenv prototype if
	setenv is in the C library.

	* forward.c: Provide setenv prototype if needed.

	* auth.c (auth_name): Cast result of sizeof() to int to match
	printf format specification.

2001-07-05  Ezra Peisach  <epeisach@mit.edu>

	* encrypt.c (encrypt_reply): Cast arguments to printf to match
	format in debugging statments.

2001-07-02  Ezra Peisach  <epeisach@mit.edu>

	* krb5forw.h: File with prototype for rd_and_store_for_creds().

	* kerberos5.c: Include krb5forw.h for rd_and_store_for_creds()
	prototype which is removed from this file.

	* forward.c: Include krb5forw.h for prototype.

	* setenv.c: Include misc-proto.h for setenv/unsetenv prototypes.

	* parsetos.c: Include misc-proto.h for parsetos prototype.

	* misc-proto.h: Add prototype for parsetos(), setenv(), unsetenv()
	as needed.

	* kerberos5.c: Declare kerberos5_forward() static and flush out
	prototype.

	* gettytab.h: Flush out prototypes for getent() and getstr().

	* getent.c: Include gettytab.h for prototypes.

	* genget.c: Include misc.h for prototypes.

	* enc_des.c: Add prototype for fb64_printsub.

	* enc-proto.h: Add prototypes for encrypt_debug(),
	finddecryption(), EncryptAuthEnc(), EncryptAutoDec(),
	EncryptDebug(), EncryptVerbose().
